fix: trying overflow fix for scroll freeze on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow: hidden;
 }
 
 a {
